estilos a los escenarios, excepto listas dentro de estas

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
     </div>
 
-    <section>
+    <section class="lineup">
         <h3>Line Up</h3>
 
         <p class="dia">Viernes 21</p>
