se agrego galeria de imagenes, sin centrar aun

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="contenedor contenido-video">
                 <h2>
                     Rock & EDM Festival
-                    <span>Junio 22, Mar del Plata</span>
+                    <span>Junio '23, Mar del Plata</span>
                 </h2>
             </div>
         </div>
@@ -43,7 +43,7 @@
         </div>
         <div class="contenido-festival">
             <h2>Rock & EDM Festival</h2>
-            <p class="fecha">Julio 2021, Guadalajara, México</p>
+            <p class="fecha">Junio 2023, Mar del Plata, Argentina</p>
             <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio alias quam ea qui laboriosam, in voluptatibus nemo, odit quo error reprehenderit accusamus nam, quidem quos autem omnis rerum ipsa. Nostrum!</p>
         </div>
     </div>
@@ -105,6 +105,15 @@
             </div>
         </div>
     </section>
+
+    <section class="galeria">
+        <h3>Galeria</h3>
+        <ul class="galeria-imagenes">
+
+        </ul>
+    </section>
+
+    <script src="build/js/bundle.js"></script>
 </body> 
      
 </html>
