--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -106,7 +106,7 @@
         </div>
     </section>
 
-    <section class="galeria">
+    <section class="galeria contenedor">
         <h3>Galeria</h3>
         <ul class="galeria-imagenes">
 
