se agregar dos listas de accesos 1 dias y 2 dias y el footer

--- a/index.html
+++ b/index.html
@@ -109,10 +109,74 @@
     <section class="galeria contenedor">
         <h3>Galeria</h3>
         <ul class="galeria-imagenes">
-
         </ul>
     </section>
 
+    <section class="boletos bg-verde">
+        <h3>Boletos</h3>
+
+        <div class="contenedor-boletos contenedor">
+            <div class="basico plan">
+                <p>Pase 1 día</p>
+
+                <table class="pase">
+                    <thead>
+                        <tr>
+                            <th>Incluye</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Acceso a todos los escenarios</td>
+                        </tr>
+                        <tr>
+                            <td>Comida y Bebida</td>
+                        </tr>
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <td>$100</td>
+                        </tr>
+                    </tfoot>
+                </table>
+            </div>
+    
+            <div class="premium plan">
+                <p>Pase 2 días</p>
+
+                <table class="pase">
+                    <thead>
+                        <tr>
+                            <th>Incluye</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Acceso a todos los escenarios</td>
+                        </tr>
+                        <tr>
+                            <td>Comida y Bebida</td>
+                        </tr>
+                        <tr>
+                            <td>Camisa del Evento</td>
+                        </tr>
+                        <tr>
+                            <td>Acceso VIP</td>
+                        </tr>
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <td>$180</td>
+                        </tr>
+                    </tfoot>
+                </table>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <p>Rock & EDM Festival. Todos los Derechos Resevados</p>
+    </footer>
     <script src="build/js/bundle.js"></script>
 </body> 
      
