fijamos la barra de navegacion una vez que algun elemento no sea visible, estaremos observando el comportamiento del elemento con intersection observer

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <h1>Rock & EDM Festival</h1>
 
             <nav class="navegacion-principal">
-                <a href="#">Line up</a>
-                <a href="#">Galeria</a>
-                <a href="#">Boletos</a>
+                <a href="#lineup">Line up</a>
+                <a href="#galeria">Galeria</a>
+                <a href="#boletos">Boletos</a>
             </nav>
         </div>
     </header>
@@ -48,7 +48,7 @@
         </div>
     </div>
 
-    <section class="lineup">
+    <section id="lineup" class="lineup">
         <h3>Line Up</h3>
 
         <p class="dia">Viernes 21</p>
@@ -106,13 +106,13 @@
         </div>
     </section>
 
-    <section class="galeria contenedor">
+    <section id="galeria" class="galeria contenedor">
         <h3>Galeria</h3>
         <ul class="galeria-imagenes">
         </ul>
     </section>
 
-    <section class="boletos bg-verde">
+    <section id="boletos" class="boletos bg-verde">
         <h3>Boletos</h3>
 
         <div class="contenedor-boletos contenedor">
